--- a/src/app/styles/signInFormStyle.css
+++ b/src/app/styles/signInFormStyle.css
@@ -40,10 +40,10 @@
     }
 
     .signin-form-button-1 {
-        @apply bg-blue-800 text-white font-bold rounded-lg w-full mb-14;
+        @apply bg-blue-800 text-white  hover:bg-blue-950 focus:bg-blue-950 font-bold rounded-lg w-full mb-14;
     }
 
     .signin-form-button-2 {
-        @apply bg-blue-800 text-white font-bold rounded-lg w-full mb-2;
+        @apply bg-blue-800 text-white  hover:bg-blue-950 focus:bg-blue-950 font-bold rounded-lg w-full mb-2;
     }
 }
