--- a/src/app/styles/signUpFormStyle.css
+++ b/src/app/styles/signUpFormStyle.css
@@ -32,6 +32,6 @@
     }
 
     .signup-form-button {
-        @apply bg-blue-800 text-white font-bold rounded-lg w-full;
+        @apply bg-blue-800 text-white  hover:bg-blue-950 focus:bg-blue-950 font-bold rounded-lg w-full;
     }
 }
